# endpoint-security-agent

./: .env.example  .gitignore  README.md  SECURITY_MODEL.md  SETUP.md  pyproject.toml  requirements.txt
cli/: __init__.py  cleanup_wizard.py  main.py
compliance/: __init__.py  engine.py  models.py
core/: __init__.py  agent.py  allowlist.py  audit_log.py  config.py  crypto.py  daemon.py  file_guard.py  file_watcher.py  license.py  logging.py  notifications.py  profiles.py  scheduler.py  telemetry.py
dashboard/: __init__.py  api.py  app.py  models.py
docs/: ARCHITECTURE.md
edr/: __init__.py  app_control.py  backup_snapshots.py  canary_files.py  connection_monitor.py  correlation_engine.py  device_control.py  dns_monitor.py  etw_monitor.py  event_store.py  event_types.py  process_monitor.py  process_tree.py  ransomware_shield.py  realtime_engine.py  sysmon_parser.py  timeline_query.py
fleet/: __init__.py  agent_registration.py  policy_client.py  telemetry_client.py
mesh/: __init__.py  config.py  discovery.py  peer_manager.py  protocol.py  threat_sharing.py  transport.py
os_modules/: __init__.py  base.py  loader.py
packaging/: auto_updater.py  build_linux.py  build_macos.py  build_macos.sh  build_windows.py  com.sentinel.agent.plist  install_windows_service.py  sentinel.service  sentinel.timer
remediation/: __init__.py  firewall_manager.py  hardening.py  linux_hardening.py  macos_hardening.py  updater.py  windows_hardening.py
reporting/: __init__.py  email_config.py  email_scheduler.py  email_sender.py  html_report.py  json_export.py  risk_engine.py  siem_integration.py
response/: __init__.py  audit.py  engine.py  models.py  policy.py  rollback.py
scanners/: __init__.py  amsi_scanner.py  base.py  browser_scanner.py  cloud_scanner.py  config_scanner.py  credential_scanner.py  ioc_scanner.py  (+20 more)
(+122 files in other folders)
